11-lecture/verybigdataapp/manifests/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: verybigdataapp
spec:
  rules:
    - host: "bigdata-__ENVIRONMENT__.__SLURM_USERNAME__.edu.slurm.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: verybigdataapp
                port:
                  number: 80
